tests/ui/nll/user-annotations/pattern_substs_on_tuple_struct.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_struct.rs:5:19
   |
LL |     let y = 22;
   |         - binding `y` declared here
LL |     let foo = Foo(&y);
   |                   ^^ borrowed value does not live long enough
LL |
LL |     let Foo::<'static>(_z) = foo;
   |         ------------------ type annotation requires that `y` is borrowed for `'static`
LL | }
   | - `y` dropped here while still borrowed

error[E0597]: `y` does not live long enough
  --> $DIR/pattern_substs_on_tuple_struct.rs:12:19
   |
LL |     let y = 22;
   |         - binding `y` declared here
LL |     let foo = Foo(&y);
   |                   ^^ borrowed value does not live long enough
...
LL |         Foo::<'static>(_z) => {
   |         ------------------ type annotation requires that `y` is borrowed for `'static`
...
LL | }
   | - `y` dropped here while still borrowed

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
